Scrolling problem on mobiles fixed.

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 @custom-variant dark (&:where(.dark, .dark *));
 
-:root {
+html {
   text-align: center;
   scroll-behavior: smooth;
 }
@@ -11,9 +11,10 @@
 }
 
 
-html, body {
-  height: 100vh;
+body {
+  height: 100%;
   width: 100%;
+  overflow-x: hidden;
 }
 
 
